# Hodor-doors-shop

./: .gitignore  README.md  pyproject.toml
accounts/: admin.py  forms.py  managers.py  mixins.py  models.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers_user_date_joined_user_is_staff_and_more.py  0003_remove_user_basket_delete_basket.py  0004_alter_user_options.py  0005_userrole_user_role.py
cart/: cart.py  forms.py  urls.py  views.py
products/: admin.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_delete_door.py  0003_product_img.py  0004_alter_organization_options_alter_product_options_and_more.py
shop/: env_example  settings.py  urls.py  views.py
static/css/: styles.css
templates/: base.html
templates/accounts/: profile.html
templates/auth/: login.html  signup.html  signup_done.html
templates/auth/mail/: verification_body.html  verification_subject.txt
templates/blocks/: navbar.html
templates/cart/: detail.html
templates/fields/: _form_errors.html  _form_field.html  field.html
templates/products/: detail.html  list.html
test_mock/: create_organizations.py  create_products.py
utils/: context_proccessors.py  fields.py  utils.py  validators.py
utils/templatetags/: fields.py
