[tool.poetry]
name = "hodor-doors-shop"
version = "0.1.0"
description = ""
authors = ["Alexander_Scherbakov <webmasterdracarys@gmail.com>"]
readme = "README.md"
packages = [{include = "hodor_doors_shop"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.1"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
